@@ -21,7 +21,7 @@ namespace Castle.ActiveRecord.Framework.Internal.Tests
 
 	[TestFixture]
 	public class SemanticCheckTestCase : AbstractActiveRecordTest
-	{
+	{			
 		[Test]
 		[ExpectedException( typeof(ActiveRecordException), "Unfortunatelly you can't have a discriminator class and a joined subclass at the same time - check type Castle.ActiveRecord.Framework.Internal.Tests.Model.Company" )]
 		public void JoinedAndDiscriminatorClass()
